# ANTS_stuff

./: .gitignore  ANTS_JASMIN.md  Mule_Easy_Install.md  README.md  ants_issue_constraint_12-05-2022.md
ants/: CONTRIBUTING.rst  INSTALL.rst  LICENSE.txt  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py
ants/docs/: Makefile
ants/docs/source/: about.rst  analysis.rst  appendixA_time_handling.rst  appendixB_CLA.rst  appendixC_antslaunch.rst  application_development.rst  applications.rst  conf.py  contributing.rst  current_applications.rst  decomposition.rst  developer_guidelines.rst  examples.rst  index.rst  install.rst  introduction.rst  io.rst  merge.rst  mule-objects.inv  regrid.rst  running_applications.rst  toolkit.rst
ants/docs/source/_templates/: module.rst_t
ants/lib/ANTS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ants/lib/ants/: __init__.py  _constraints.py  command_parse.py  config.py  coord_systems.py  decomposition.py  deprecations.py  exceptions.py  stats.py
ants/lib/ants/analysis/: __init__.py  _merge.py  _raymond.py  cover_mapping.py  filters.py
ants/lib/ants/fileformats/: __init__.py  _grid_extract.py  _ugrid.py  cover_mapping.py  json.py  raster.py
ants/lib/ants/io/: save.py
ants/lib/ants/regrid/: __init__.py  _ugrid.py  esmf.py  interpolation.py  rectilinear.py
ants/lib/ants/tests/: __init__.py  stock.py  test_coding_standards.py
ants/lib/ants/utils/: __init__.py  _dask.py  coord.py  cube.py  dask.py  ndarray.py
ants/lib/proc_ants/: lakes.py  lct.py  lct_preproc_cci.py  lct_preproc_igbp.py  lct_preproc_ite.py  location_class.py  order_nemo_rivers.py
ants/rose-stem/: suite.rc
ants/rose-stem/app/ancil_2anc/: rose-app.conf
ants/rose-stem/app/ancil_add_lakes/: rose-app.conf
ants/rose-stem/app/ancil_fill_n_merge/: rose-app.conf
ants/rose-stem/app/ancil_general_regrid/: rose-app.conf
ants/rose-stem/app/ancil_lct/: rose-app.conf
ants/rose-stem/sources/: ancil_general_regrid_invert_mask_not_filled.nc  c4_percent_1d.asc  c4_percent_1d.nc  cci.nc  cci_ukv.nc  easy_cdnc_PI-MACv2-SP_v2_two_levels.nc  fekete_storage_data.pp  grid.n48e  n48_namelist  n48e_namelist  n96e_orca_land_cover_fraction  regular_namelist  river_routing.pp  target.nc  topographic_index.nc  ukv_coarse_land_cover_fraction.nc  variable_namelist
ants/utils/rose_ana/: README.txt  check_cumf.py  check_nccmp.py  test_check_cumf.py  test_check_nccmp.py
(+390 files in other folders)
