[metadata]
name = ANTS
version = attr: ants.__version__
author = Climate Model Inputs and Outputs team, Met Office
author_email = miao@metoffice.gov.uk
description = Toolkit for generating ancillary files
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://code.metoffice.gov.uk/trac/ancil/wiki
project_urls =
    Bug Tracker = https://code.metoffice.gov.uk/trac/ancil/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Unix

[options]
package_dir =
    = lib
packages = find:
python_requires = >=3.7

[options.packages.find]
where = lib

[flake8]
max-line-length = 88
extend-ignore = E203
